--- a/Group_Project_3280.csproj
+++ b/Group_Project_3280.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="clsDataAccess.cs" />
+    <Compile Include="ExceptionHandler.cs" />
     <Compile Include="Invoice.cs" />
     <Compile Include="Main\clsMainLogic.cs" />
     <Compile Include="Main\clsMainSQL.cs" />
